# Codebase

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/backend/: README.md
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
ci/: Jenkinsfile  (+2 more)
services/scanner-core/: README.md  launcher.py  pyproject.toml  security-platform-backend.spec
services/scanner-core/security_platform/: cli.py
services/scanner-core/security_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
services/scanner-core/security_platform/ai/: __init__.py  triage.py
services/scanner-core/security_platform/api/: __init__.py  main.py
services/scanner-core/security_platform/core/: __init__.py  advisories.py  binary_manager.py  config.py  correlation.py  models.py  orchestrator.py  plugin.py  process.py  reporting.py  repository.py  scoring.py  storage.py  utils.py
services/scanner-core/security_platform/plugins/: __init__.py  actionlint.py  bandit.py  cargo_audit.py  checkov.py  credsweeper.py  detect_secrets.py  eslint.py  flawfinder.py  gitleaks.py  grype.py  loader.py  npm_audit.py  osv_scanner.py  pip_audit.py  pylint.py  registry.py  retirejs.py  semgrep.py  syft.py  trivy.py  trufflehog.py
services/scanner-core/security_platform/resources/: tool_manifests.yaml
services/scanner-core/security_platform/templates/: executive-summary.html.j2  modern-report.html.j2  report.html.j2  traditional-report.html.j2
(+36 files in other folders)
