[package]
name = "code-base-scanner-desktop"
version = "0.1.0"
description = "Cross-platform desktop host for Code Base Scanner"
authors = ["Code Base Scanner"]
edition = "2021"

[lib]
name = "code_base_scanner_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-dialog = "2.2.0"

